Made the VM name and PORT selection dynamic
    - A script will be placed in a dir. that script will write
      a available port number and random VM name to a file settings.yaml
    - Vagrantfile will use that settings.yaml to create a new VM

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-## How to RUN the Vagrant Command
+# Vagrant
 
 ```sh
-vagrant ssh kube-lab -c "ttyd -W bash" --no-tty
+$ vagrant ssh kube-lab -c "ttyd -W bash" --no-tty
 ```
